CPANTS game and kwalitee issues: add a license file and mention it in the code sourcefiles.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Date::Convert::French_Rev.
 
+0.06  ???
+        - kwalitee issues and CPANTS game: license
+
 0.05  Nonidi 9 Floréal CCXI, jour de la jacinthe (Monday 2003-04-28)
         - last version compatible with Date::Convert, next one will
         be in the DateTime::Calendar namespace, compatible with DateTime.pm
