--- a/README
+++ b/README
@@ -2,9 +2,24 @@ Date::Convert::French_Rev - Jean Forget <J-FORGET@wanadoo.fr>
 
 Date conversion using the French Revolutionary calendar.
 
-This module  is obsolete. It is  replaced by a  module compatible with
-Dave Rolsky's DateTime.pm. See:
-  DateTime::Calendar::FrenchRevolutionary
+WHY A NEW VERSION AFTER TEN YEARS?
+
+I released  the last version  of this module  the same day  I released
+DateTime::Calendar::FrenchRevolutionary version  0.01. It was intended
+to  be the  final version  of Date::Convert::French_Rev.  So why  do I
+release another version ten years later?
+
+Between  2003 and  2013, the  world has  moved on  and CPAN  has moved
+on.  In  2003, UTF-8  was  a promising  technic,  but  not yet  widely
+used. In  2013, UTF-8 *is*  widely used. In  2003, there was a  set of
+CPAN  best  practices:  test   scripts  in  t/*.t  for  example.  Some
+recommanded practices appeared later: META.yml for example. And CPANTS
+was  created  to  provide   a  static  code  analysis  checking  these
+recommanded practices. So  this new version is also  meant to catch up
+with these  recommanded practices. In  other words, I play  the CPANTS
+game and I try to improve my rating by updating this module.
+
+PRESENTATION
 
 This   module  is   a  add-on   to  Mordechai   Abzug's  Date::Convert
 module.  Since  his  module  is  pre-alpha,  mine  is,  too.   Another
