--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 -*- encoding: utf-8; indent-tabs-mode: nil -*-
 Revision history for Perl extension Date::Convert::French_Rev.
 
-0.06  ???
-        - kwalitee issues and CPANTS game: license, style
+0.06  Octidi 18 Brumaire CCXXII, jour de la dentelaire (Friday 2013-11-08, also
+      the 214th anniversary of Bonaparte's coup agains the Directory)
+        - kwalitee issues: license, style, META.{yml,json}
         - use UTF-8 instead of ISO-8859-1, use spaces instead of tabs
         - more tests, more modern tests
 
@@ -22,7 +23,7 @@ Revision history for Perl extension Date::Convert::French_Rev.
 	use statement and the @ISA array are not sufficient)
         - add a few examples in the eg/ subdirectory
 	- fix a few bugs: $_ was squashed by date_string, the month value
-	was not controlled
+	was not checked
 	- compatibility with diagnostics-1.2
 
 0.03  Décadi 20 Thermidor CCIX, jour de l'écluse (Tuesday 2001-08-07)
