--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 Revision history for Perl extension Date::Convert::French_Rev.
 
 0.06  Octidi 18 Brumaire CCXXII, jour de la dentelaire (Friday 2013-11-08, also
-      the 214th anniversary of Bonaparte's coup agains the Directory)
+      the 214th anniversary of Bonaparte's coup agains the Directorate)
         - kwalitee issues: license, style, META.{yml,json}
         - use UTF-8 instead of ISO-8859-1, use spaces instead of tabs
         - more tests, more modern tests
