--- a/Changes
+++ b/Changes
@@ -1,11 +1,14 @@
 -*- encoding: utf-8; indent-tabs-mode: nil -*-
 Revision history for Perl extension Date::Convert::French_Rev.
 
-0.08  ???
+0.08  Tridi 23 Thermidor CCXXIII, jour de la lentille (Monday 2015-08-10,
+      which, according to the Gregorian calendar, is the 223rd anniversary
+      of the storming of the Tuileries palace)
         - fix prerequisite: Date::Convert 0.16 is fine, 0.14 is not.
           Actually, RT ticket 90470 was prematurely and erroneously declared
           as "fixed".
         - improve the documentation of method "change_to".
+        - add more tests
 
 0.07  Décadi 10 Thermidor CCXXIII, jour de l'arrosoir (Tuesday 2015-07-28, also
       the 221st anniversary of Robespierre's death)
