--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
 Revision history for Perl extension Date::Convert::French_Rev.
 
 0.09  ???
+        - fix a few typos in the feasts names (thank you Gérald)
+        - add a few entries in the "SEE ALSO" chapter (thank you Gérald)
+        - tidying up the documentation, for example replacing http:// by https:// whenever possible
 
 0.08  Tridi 23 Thermidor CCXXIII, jour de la lentille (Monday 2015-08-10,
       which, according to the Gregorian calendar, is the 223rd anniversary
