--- a/Changes
+++ b/Changes
@@ -4,8 +4,9 @@ Revision history for Perl extension Date::Convert::French_Rev.
 0.09  ???
         - fix a few typos in the feasts names (thank you Gérald)
         - add a few entries in the "SEE ALSO" chapter (thank you Gérald)
-        - tidying up the documentation, for example replacing http:// by https:// whenever possible
-        - starting a deprecation process for the %L strftime specifier
+        - tidy up the documentation, for example replacing http:// by https:// whenever possible
+        - start a deprecation process for the %L strftime specifier
+        - check the scripts in the eg subdirectory
 
 0.08  Tridi 23 Thermidor CCXXIII, jour de la lentille (Monday 2015-08-10,
       which, according to the Gregorian calendar, is the 223rd anniversary
@@ -40,7 +41,7 @@ Revision history for Perl extension Date::Convert::French_Rev.
 0.04  Tridi 13 Fructidor CCX, jour de l'épine-vinette (Friday 2002-08-30)
         - reorganise the directory structure along Matt Sergeant's tips
         - include the 4000-modulus rule for leap years (according to emacs-21.2)
-        - reorganise the absolute -> FR conversion
+        - reorganise the absolute → FR conversion
         - rephrase the README file
         - add the  prerequisite for Date::Convert  in Makefile.PL (the
         use statement and the @ISA array are not sufficient)
