--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 -*- encoding: utf-8; indent-tabs-mode: nil -*-
 Revision history for Perl extension Date::Convert::French_Rev.
 
-0.09  ???
+0.09  Primidi 1st Vendémiaire CCXXIX, jour du raisin, new year's day (Tuesday 22 September 2020)
         - fix a few typos in the feasts names (thank you Gérald)
         - add a few entries in the "SEE ALSO" chapter (thank you Gérald)
         - tidy up the documentation, for example replacing http:// by https:// whenever possible
